traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:23: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:26: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:29: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:32: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:35: error: Unmatched closing brace '}' ignored here
}
^